# LTA-Development

./: .ftpconfig  .gitignore  README.md
Application C/downloadTemplate/: downloadTemplate.c  downloadTemplate.cbp  downloadTemplate.depend  downloadTemplate.layout  main.c
Application C/downloadTemplate/include/: downloadTemplate.h
Application C/logIn/signIn/: main.c  signIn.cbp  signIn.depend  signIn.layout
Application C/readExcel/: Makefile  main.c  packageProcess.c  readExcel.cbp
Application C/readExcel/excelFile/: template.csv  test.csv
Application C/readExcel/include/: packageProcess.h
Application C/sendFileInServer/: main.c  sendFileInServer.c  sendFileInServer.cbp  sendFileInServer.depend  sendFileInServer.layout
Application C/sendFileInServer/file/: DownloadedFile.txt
Application C/sendFileInServer/include/: sendFileInServer.h
Application C/sendInfo/: main.c  sendInfo.cbp  sendInfo.depend  sendInfo.layout
Code test/QrCode/: Makefile.win  main.c
Sources/Application C/: Application C.cbp  Application C.depend  Application C.layout  CMakeLists.txt  account.c  connection.glade  connection.glade~  gtk.c  main.c  orderProcess.c  qrcodeProcess.c  qrcodegen.c  sendFileInServer.c  sql.c
Sources/Application C/include/: account.h  gtk.h  orderProcess.h  qrcodeProcess.h  qrcodegen.h  sendFileInServer.h  sql.h
Sources/Application C/include/gtk3/atk/: atkmisc.h
Sources/Application C/include/mysql/server/private/: config.h
Sources/Application C/lib/: libmariadb.lib  mariadbclient.lib
Sources/www/: .htaccess  index.php
Sources/www/css/: bill.css  (+14 more)
(+87 files in other folders)
